frontend/src/game/creation/EditableCard.css
div.editable-card {
	font-size: 3rem;
	display: flex;
	flex-direction: column;
}

div.editable-card > div.input-card {
	height: 3em;
}

div.editable-card > div.input-card > input[type="text"] {
	margin: 0;
	padding: 0;
	border: none;
	background: none;
	font-size: inherit;
	text-align: center;
	/* filter: grayscale(1); */
}

div.editable-card > button.remove-button {
	font-size: 1rem;
	width: 6em;
	border: 0.2em solid lightcyan;
	margin: 0 1em 1em 1em;
	border-radius: 0.5em;
	box-sizing: content-box;
    padding: 0;
}

div.editable-card > button.remove-button:hover{
    cursor: pointer;
}

